initial: replace all occurences of Advocate Europe with Civic Europe

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "civic_europe",
   "version": "0.10.0-release.1",
   "license": "AGPL-3.0+",
-  "description": "Frontend for Advocate Europe",
+  "description": "Frontend for Civic Europe",
   "author": {
     "name": "Liquid Democracy e.V.",
     "email": "info@liqd.de",
