--- a/civic_europe/assets/icons/manifest.json
+++ b/civic_europe/assets/icons/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Advocate Europe",
+  "name": "Civic Europe",
   "icons": [
     {
       "src": "/static/icons/android-chrome-192x192.png",
