--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@babel/preset-react": "7.8.3",
     "@babel/runtime": "7.8.3",
     "@fortawesome/fontawesome-free": "5.12.0",
-    "adhocracy4": "github:liqd/adhocracy4#449faea1a5",
+    "adhocracy4": "github:liqd/adhocracy4#38813a50a48ea1def106b5c72a2a015434384141",
     "autoprefixer": "9.7.4",
+    "axios": "0.19.1",
     "babel-loader": "8.0.6",
-    "bootstrap-sass": "3.4.1",
+    "bootstrap": "4.4.1",
     "classnames": "2.2.6",
     "copy-webpack-plugin": "5.1.1",
     "css-loader": "3.4.2",
@@ -29,6 +30,7 @@
     "js-cookie": "2.2.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.13.1",
+    "popper.js": "1.16.0",
     "postcss-loader": "3.0.0",
     "react": "16.12.0",
     "react-addons-update": "15.6.2",
