--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "husky": "4.3.0",
+    "postcss": "8.1.2",
     "standard": "16.0.3",
     "stylelint": "13.7.1"
   },
