--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "build:prod": "webpack --config ./webpack.prod.js --mode production",
     "build": "webpack --config ./webpack.dev.js --progress --mode development",
-    "watch": "webpack --config ./webpack.dev.js --progress --color --watch --mode development",
+    "watch": "webpack --config ./webpack.dev.js --progress --colors --watch --mode development",
     "lint": "standard '{apps,cms,civic_europe}/**/*.{js,jsx}' && stylelint 'civic_europe/assets/scss/**/*.scss' --syntax scss"
   },
   "browserslist": "last 3 versions, ie >= 11",
