fixtures: update fixtures so work with new form and add a sample image to media file with git ignore exception

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,14 @@ db.sqlite3*
 static/
 
 # Media
-media/
+media/*
+!media/ideas/
+
+media/ideas/*
+!media/ideas/images/
+
+media/ideas/images/*
+!media/ideas/images/fixture/
 
 # setuptools
 /build
