--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-react": "7.12.10",
     "@babel/runtime": "7.12.5",
     "@fortawesome/fontawesome-free": "5.15.1",
-    "adhocracy4": "github:liqd/adhocracy4#7d59b4e21ed36c916c66de06488712decf96b110",
+    "adhocracy4": "github:liqd/adhocracy4#ce-v2101",
     "autoprefixer": "10.2.1",
     "axios": "0.21.1",
     "babel-loader": "8.2.2",
