settings: rename master to main and container upgrade

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,19 +2,19 @@ name: Django CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.6'
+          python-version: '3.8'
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
@@ -61,7 +61,7 @@ jobs:
         run: |
           coveralls
       - name: Deploy
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         env:
           TRAVIS_SSH_SECRET: ${{ secrets.DEPLOY }}
         run: |
