--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-react": "7.12.13",
     "@babel/runtime": "7.12.13",
     "@fortawesome/fontawesome-free": "5.15.2",
-    "adhocracy4": "github:liqd/adhocracy4#ce-v2105",
+    "adhocracy4": "github:liqd/adhocracy4#7a6ad7685f489ed7c06c19bbf456760755b4eca7",
     "autoprefixer": "10.2.4",
     "axios": "0.21.1",
     "babel-loader": "8.2.2",
@@ -28,6 +28,8 @@
     "file-loader": "6.2.0",
     "jquery": "3.5.1",
     "js-cookie": "2.2.1",
+    "mapbox-gl": "1.13.2",
+    "mapbox-gl-leaflet": "0.0.15",
     "mini-css-extract-plugin": "1.3.5",
     "node-sass": "5.0.0",
     "popper.js": "1.16.1",
