--- a/package.json
+++ b/package.json
@@ -9,48 +9,47 @@
     "url": "https://liqd.net"
   },
   "dependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/plugin-transform-modules-commonjs": "7.12.13",
-    "@babel/plugin-transform-runtime": "7.12.15",
-    "@babel/preset-env": "7.12.13",
-    "@babel/preset-react": "7.12.13",
-    "@babel/runtime": "7.12.13",
-    "@fortawesome/fontawesome-free": "5.15.2",
+    "@babel/core": "7.17.8",
+    "@babel/plugin-transform-modules-commonjs": "7.17.7",
+    "@babel/plugin-transform-runtime": "7.17.0",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/runtime": "7.17.8",
+    "@fortawesome/fontawesome-free": "5.15.4",
     "adhocracy4": "github:liqd/adhocracy4#7a6ad7685f489ed7c06c19bbf456760755b4eca7",
-    "autoprefixer": "10.2.4",
-    "axios": "0.21.1",
-    "babel-loader": "8.2.2",
-    "bootstrap": "4.6.0",
-    "classnames": "2.2.6",
-    "copy-webpack-plugin": "5.1.2",
-    "css-loader": "5.0.1",
-    "extract-text-webpack-plugin": "3.0.2",
+    "autoprefixer": "10.4.4",
+    "babel-loader": "8.2.4",
+    "bootstrap": "4.6.1",
+    "classnames": "2.3.1",
+    "copy-webpack-plugin": "10.2.4",
+    "css-loader": "6.7.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "6.2.0",
-    "jquery": "3.5.1",
-    "js-cookie": "2.2.1",
+    "jquery": "3.6.0",
+    "js-cookie": "3.0.1",
     "mapbox-gl": "1.13.2",
     "mapbox-gl-leaflet": "0.0.15",
-    "mini-css-extract-plugin": "1.3.5",
-    "node-sass": "5.0.0",
+    "mini-css-extract-plugin": "2.6.0",
+    "node-sass": "7.0.0",
     "popper.js": "1.16.1",
-    "postcss-loader": "4.2.0",
-    "react": "17.0.1",
+    "postcss-loader": "6.2.1",
+    "react": "18.0.0",
     "react-addons-update": "15.6.3",
-    "react-dom": "17.0.1",
+    "react-dom": "18.0.0",
     "react-flip-move": "3.0.4",
-    "sass-loader": "10.1.1",
+    "sass-loader": "12.6.0",
     "slick-carousel": "1.8.1",
-    "style-loader": "2.0.0",
+    "style-loader": "3.3.1",
     "terser-webpack-plugin": "3.1.0",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
-    "webpack-merge": "5.7.3"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "5.8.0"
   },
   "devDependencies": {
-    "husky": "4.3.8",
-    "postcss": "8.2.6",
-    "standard": "16.0.3",
-    "stylelint": "13.10.0"
+    "husky": "7.0.4",
+    "postcss": "8.2.13",
+    "standard": "16.0.4",
+    "stylelint": "13.13.1"
   },
   "scripts": {
     "build:prod": "webpack --config ./webpack.prod.js --mode production",
