--- a/package.json
+++ b/package.json
@@ -48,13 +48,15 @@
     "husky": "7.0.4",
     "postcss": "8.4.12",
     "standard": "16.0.4",
-    "stylelint": "13.13.1"
+    "stylelint": "14.6.1",
+    "stylelint-config-standard-scss": "3.0.0",
+    "stylelint-declaration-strict-value": "1.8.0"
   },
   "scripts": {
     "build:prod": "webpack --config ./webpack.prod.js --mode production",
     "build": "webpack --config ./webpack.dev.js --progress --mode development",
     "watch": "webpack --config ./webpack.dev.js --progress --color --watch --mode development",
-    "lint": "standard '{apps,cms,civic_europe}/**/*.{js,jsx}' && stylelint 'civic_europe/assets/scss/**/*.scss' --syntax scss"
+    "lint": "standard '{apps,cms,civic_europe}/**/*.{js,jsx}' && stylelint 'civic_europe/assets/scss/**/*.scss'"
   },
   "browserslist": "last 3 versions, ie >= 11",
   "husky": {
